[tool.poetry]
name = "asio-coroutine-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
black-macchiato = "^1.3.0"
mypy-ls = "^0.5.1"
python-lsp-server = "^1.2.0"
numpydoc = "^1.1.0"
pydocstyle = "^6.1.1"
pylint = "^2.9.6"
pyls-flake8 = "^0.4.0"
pyls-isort = "^0.2.2"
python-lsp-black = "^1.0.0"
yapf = "^0.31.0"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
